--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/test?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysql:3306/test?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
